--- a/src/styles/layout.module.scss
+++ b/src/styles/layout.module.scss
@@ -1,14 +1,12 @@
 .container {
     margin: 0 auto;
-    max-width: 750px;
-    padding: 1rem;
-    
-    
+    max-width: 1000px;
+    padding: 0 1rem;    
     display: flex;
     flex-direction: column;
+    align-content: center;
     min-height: 100vh;
 }
-
 .content{
-    flex-grow: 1;
+    margin: 2rem 0;
 }
