--- a/src/styles/layout.module.scss
+++ b/src/styles/layout.module.scss
@@ -1,12 +1,23 @@
-.container {
+.layout {
     margin: 0 auto;
-    max-width: 1000px;
-    padding: 0 1rem;    
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    min-height: 100vh;
+  width: 80vw;
+  min-height: 100vw;
+  height: auto;
+  /* flex */
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: flex-start;
+  align-content: flex-start;
+  /* style */
 }
-.content{
-    margin: 2rem 0;
+.content {
+  width: inherit;
+  height: 100%;
+  /* flex */
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: flex-start;
+  align-content: flex-start;
+  /* style */
+  box-shadow: 0 .5rem .5rem 0 #999999;
 }
