added responsive toggle button to menu, switching to navbar brach to continue

--- a/src/styles/portfolio.css
+++ b/src/styles/portfolio.css
@@ -3,7 +3,7 @@
   src: url(../fonts/FuturaCondensedExtraBold.otf);
 }
 
-/* BOOTSTRAP OVERRIDES */
+/* ELEMENTS  */
 html {
   box-sizing: border-box;
   scroll-behavior: smooth;
@@ -17,7 +17,7 @@ li {
   list-style-type: none;
 }
 
-/* PAGE SPECIFIC CLASSES */
+/* GLOBAL CLASSES */
 .section {
   min-height: 80vh;
 }
@@ -33,6 +33,7 @@ li {
   border: 1px solid black;
   text-align: right;
 }
+
 /* HOME SECTION */
 #home {
   height: 100vh;
@@ -56,15 +57,21 @@ li {
 /* MAIN NAV */
 #main-nav {
   width: 100vw;
-  height: 5rem;
+  height: auto;
   background-color: black;
   color: white;
   font-size: 2rem;
 }
-#main-nav #logo {
-  padding: 1rem 2rem;
+.nav-item{
+  min-width: 75px;
+  width: auto;
+  display: flex;
+  justify-content: center;
 }
-#main-nav #nav-items {
+#main-nav .fas {
+  color: white;
+}
+#main-nav-items {
   margin: auto;
 }
 #main-nav a {
@@ -76,15 +83,22 @@ li {
   background-color: salmon;
   text-decoration: none;
 }
-#main-nav .toggle {
+#main-nav-toggle {
+  display: none;
+  width: 100px;
   padding: 1rem 2rem;
   background: none;
   border: none;
 }
-
-#main-nav .fas {
-  color: white;
+@media screen and (max-width: 730px){
+  #main-nav-toggle{
+    display: block;
+  }
+  #main-nav-items{
+    display: none;
+  }
 }
+
 
 /* Intro Section */
 #intro {
